--- a/values.yaml
+++ b/values.yaml
@@ -233,9 +233,9 @@ persistence:
       #maxthreads: 100
     s3:
       region: us-west-2
-      bucket: gl-vas-harbor-service-images
-      accesskey: AKIA2N6NXWTUFAZ2LB75
-      secretkey: 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
+      bucket: <bucket name>
+      accesskey: <access key>
+      secretkey: <access key secret>
       #regionendpoint: http://myobjects.local
       #encrypt: false
       #keyid: mykeyid
@@ -277,8 +277,8 @@ secretKey: "not-a-secure-key"
 # The proxy settings for updating trivy vulnerabilities from the Internet and replicating
 # artifacts from/to the registries that cannot be reached directly
 proxy:
-  httpProxy: http_proxy=http://10.154.248.91:8080/
-  httpsProxy: http_proxy=http://10.154.248.91:8080/
+  httpProxy: <your proxy>
+  httpsProxy: <your proxy>
 # noProxy: 127.0.0.1,localhost,10.54.106.134,10.54.106.135,10.54.106.136,10.54.106.133,10.244.0.0/32,10.96.0.0/12,172.17.0.0/16,52.202.51.185,162.209.106.32,https://istiod.istio-system.svc:443,10.99.205.67,142.250.138.141:443,172.217.175.17:443,142.250.138.141,10.55.42.0/21,10.55.42.113,master:31320,master,private-repository-k8s,hub.docker.com,10.54.106.134:31320,10.54.106.134,webhook.cert-manager.io,svc,.svc.cluster.local,saashostedrepo.example.com,10.244.0.1/16,10.244.0.1/18,10.244.0.1/24,10.96.0.10
   noProxy: localhost,127.0.0.0/8,10.42.0.0/24,saashostedrepo.example.com,172.17.66.0/28,10.42.0.0/24,.example.com,10.96.0.10,10.96.0.0/12,saashostedrepo.hpe.lan
   components:
